Minor spacing fix

--- a/jullimi/style.css
+++ b/jullimi/style.css
@@ -11,8 +11,7 @@ html {
 }
 
 #message {
-	padding: 3em 20em;
-	margin: 2em 10em;
+	margin: 2em 20%;
 }
 
 #logo {
